test/corpus/defn.txt
==================
Define word
==================
: simple 1 + ;

: fib ( n -- fib )
  0 1 rot 0 ?do  over + swap  loop drop ;

---

(source_file
  (word_definition
    (start_definition)
    (word)
    (number)
    (builtin
      (operator))
    (end_definition))
  (word_definition
    (start_definition)
    (word)
    (comment
      (stack_effect))
    (number)
    (number)
    (builtin
      (core))
    (number)
    (builtin
      (core))
    (builtin
      (core))
    (builtin
      (operator))
    (builtin
      (core))
    (builtin
      (core))
    (builtin
      (core))
    (end_definition)))
